assets/styles/stylesheet.css
/* ... */
.contact-section a:hover {
    color: orange;
    text-decoration: none;
}

.contact-text {
    max-width: 80%;
    margin: 0 auto;
}

/* For screens smaller than 320px (Mobile) */
@media (min-width: 320px) and (max-width: 420px) {
    #header h1 {
        margin-right: 20px;
        font-size: 14px;
    }

    #header ul li {
        margin-right: 10px;
    }

    #hero-image img {
        height: 200px;
    }

    #hero-image {
        position: relative;
        margin-top: 0px;
        overflow: hidden;
        width: 100%;
    }

    #ai-info {
        bottom: 300px;
        right: 20px;
        font-size: 7px;
        float: left;
    }


    #ai-info p {
        bottom: 200px;
        right: 75px;
    }

    #custom-contact {
        left: 50px;
        right: 50px;
        width: 250px;
        margin-left: 30px;
        margin-bottom: 540px;
    }

    #contact-information {
        margin-left: 20px;
        margin-right: 20px;
        height: 190px;
    }

    .blockchain {
        margin-bottom: 10px;
    }

    .blockchain2 {
        padding-top: 140px;
        padding-bottom: 120px;
        margin-bottom: 10px;
    }

    .blockchain ul li {
        height: 50px;
        width: 260px;
        display: contents;
        font-size: x-small;
    }

    .blockchain2 ul li {
        height: 50px;
        width: 177px;
        display: contents;
        font-size: x-small;
    }

    .circle {
        width: 70px;
        height: 60px;
        border-radius: 50%;
    }

    .contact-information::before {
        font-size: 10px;
    }

    #signup-btn {
        color: coral;
        text-align: center;
    }

    h2 {
        font-size: 20px;
    }

    p {
        font-size: 10px;
    }

    .timeline {
        margin: 50px auto;
        transform: scale(1);
    }

    .timeline-content {
        width: 0%;
        margin-left: 0px;
    }

    .quiz-section {
        margin-left: 10px;
    }

    form label,
    form input[type="text"],
    form input[type="email"],
    form input[type="tel"],
    form input[type="submit"] {
        margin-bottom: 10px;
        border-radius: 20px;
        color: orange;
    }

    form#signup-section {
        display: inline-grid;
    }

    #header.grid_12 {
        font-size: 7px;
        padding-top: 10px;
    }

    #nav {
        flex-direction: column;
        align-items: flex-start;
    }

    #nav li {
        margin-bottom: 10px;
    }

    .social-networks {
        display: flex;
    }

    .contact {
        width: 470px;
    }

    .footer {
        margin-top: 85px;
        width: 320px;
    }


}

/* For screens at 768px wide */
@media (min-width: 768px) {
    #header h1 {
        margin-right: 40px;
        font-size: 17px;
    }

    #header ul li {
        margin-right: 10px;
    }

    #hero-image img {
        height: 210px;
    }

    #ai-info {
        bottom: 300px;
        right: 20px;
        font-size: 7px;
        float: inherit;
    }


    #ai-info p {
        bottom: 200px;
        right: 75px;
    }

    #custom-contact {
        display: block;
        height: 485px;
        margin-left: 100px;
        margin-right: 00px;
    }

    .blockchain {
        margin-bottom: 10px;
    }

    .blockchain2 {
        padding-top: 140px;
        padding-bottom: 120px;
        margin-bottom: 10px;
    }

    .blockchain ul li {
        height: 50px;
        width: 260px;
        display: contents;
        font-size: x-small;
    }

    .blockchain2 ul li {
        height: 50px;
        width: 177px;
        display: contents;
        font-size: x-small;
    }

    .circle {
        width: 70px;
        height: 60px;
        border-radius: 50%;
    }

    .contact-information::before {
        font-size: 10px;
    }

    #contact-information {
        height: 180px;
    }

    .quiz-section {
        margin-left: 250px;
    }

    h2 {
        font-size: 20px;
    }

    p {
        font-size: 15px;
    }

    form#signup-section {
        display: inline-grid;
    }

    #signup-btn {
        background-color: orange;
        color: white;
    }

    .timeline {
        margin: 50px auto;
        transform: scale(1);
        width: 400px;
    }

    #header.grid_12 {
        font-size: 12px;
        padding-top: 10px;
    }

    #nav {
        flex-direction: inherit;
        align-items: flex-start;
    }

    #nav li {
        margin-bottom: 10px;
    }

    .social-networks {
        display: block;
        margin-top: 40px;
    }

    .footer {
        margin-top: 50px;
        width: 768px;
    }

}
/* ... */

